--- a/package.json
+++ b/package.json
@@ -11,26 +11,34 @@
     "start": "ember server",
     "test": "ember try:each"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Taras Mankovski/ember-element-resize-detector.git"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Taras Mankovski <tarasm@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
+    "ember-addon-genie": "0.0.6",
     "ember-ajax": "^2.0.1",
     "ember-cli": "2.6.0-beta.3",
     "ember-cli-app-version": "^1.0.0",
+    "ember-cli-blanket": "0.9.5",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-es5-shim": "0.3.0",
+    "ember-cli-github-pages": "0.1.0",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "^1.4.0",
-    "ember-cli-release": "0.2.8",
+    "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cli-yuidoc": "0.8.3",
     "ember-data": "^2.6.0-beta.1",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
@@ -46,6 +54,7 @@
     "ember-cli-babel": "^5.1.6"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "http://Taras Mankovski.github.io/ember-element-resize-detector"
   }
 }
