--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.1",
     "loader.js": "^4.0.1"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.6"
+    "element-resize-detector": "1.1.4",
+    "ember-cli-babel": "^5.1.6",
+    "ember-cli-node-assets": "0.1.3"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
