--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-es5-shim": "0.3.0",
     "ember-cli-github-pages": "0.1.0",
-    "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
@@ -43,6 +42,7 @@
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-notify": "5.1.0",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.1"
   },
@@ -52,7 +52,8 @@
   "dependencies": {
     "element-resize-detector": "1.1.4",
     "ember-cli-babel": "^5.1.6",
-    "ember-cli-node-assets": "0.1.3"
+    "ember-cli-node-assets": "0.1.3",
+    "ember-cli-htmlbars": "^1.0.3"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
