--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
+    "broccoli-funnel": "1.0.2",
+    "broccoli-merge-trees": "1.1.1",
     "ember-addon-genie": "0.0.6",
     "ember-ajax": "^2.0.1",
     "ember-cli": "2.6.0-beta.3",
@@ -52,7 +54,6 @@
   "dependencies": {
     "element-resize-detector": "1.1.4",
     "ember-cli-babel": "^5.1.6",
-    "ember-cli-node-assets": "0.1.3",
     "ember-cli-htmlbars": "^1.0.3"
   },
   "ember-addon": {
