--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,34 @@
 language: node_js
 node_js:
-  - '4'
-sudo: required
+  # we recommend testing addons with the same minimum supported node version as Ember CLI
+  # so that your addon works for all apps
+  - "6"
+
+sudo: false
+dist: trusty
+
+addons:
+  chrome: stable
+
 cache:
   directories:
-    - node_modules
+    - $HOME/.npm
+
 env:
-  - EMBER_TRY_SCENARIO=default
-  - EMBER_TRY_SCENARIO=ember-release
-  - ALLOW_DEPRECATIONS=true EMBER_TRY_SCENARIO=ember-beta
-  - ALLOW_DEPRECATIONS=true EMBER_TRY_SCENARIO=ember-canary
+  global:
+    # See https://git.io/vdao3 for details.
+    - JOBS=1
+  matrix:
+    # we recommend new addons test the current and previous LTS
+    # as well as latest stable release (bonus points to beta/canary)
+    - EMBER_TRY_SCENARIO=ember-lts-2.12
+    - EMBER_TRY_SCENARIO=ember-lts-2.16
+    - EMBER_TRY_SCENARIO=ember-lts-2.18
+    - EMBER_TRY_SCENARIO=ember-release
+    - EMBER_TRY_SCENARIO=ember-beta
+    - EMBER_TRY_SCENARIO=ember-canary
+    - EMBER_TRY_SCENARIO=ember-default
+
 matrix:
   fast_finish: true
   allow_failures:
@@ -19,17 +38,19 @@ before_install:
   - 'export DISPLAY=:99.0'
   - sh -e /etc/init.d/xvfb start
   - npm config set spin false
-  - npm install -g npm@^3
-  - npm install -g bower
+  - npm install -g npm@4
+  - npm --version
   - npm install -g codeclimate-test-reporter
 install:
   - npm install
-  - bower install
 before_script:
  - git config --global user.email "taras@embersherpa.com"
  - git config --global user.name "Robots"
 script:
-  - ember try $EMBER_TRY_SCENARIO test --skip-cleanup
+  - npm run lint:js
+  # Usually, it's ok to finish the test scenario without reverting
+  #  to the addon's original dependency state, skipping "cleanup".
+  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
 dist: trusty
 addons:
   apt:
