--- a/package.json
+++ b/package.json
@@ -2,59 +2,66 @@
   "name": "ember-element-resize-detector",
   "version": "0.1.5",
   "description": "The default blueprint for ember-cli addons.",
+  "keywords": [
+    "ember-addon"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EmberSherpa/ember-element-resize-detector"
+  },
+  "license": "MIT",
+  "author": "Taras Mankovski <taras@embersherpa.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each"
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/EmberSherpa/ember-element-resize-detector"
+  "dependencies": {
+    "broccoli-funnel": "^1.0.2",
+    "broccoli-merge-trees": "^1.1.1",
+    "element-resize-detector": "^1.1.4",
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-htmlbars": "^2.0.1"
+  },
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-addon-genie": "0.0.6",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "~3.3.0",
+    "ember-cli-blanket": "0.9.5",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-es5-shim": "0.3.0",
+    "ember-cli-eslint": "^4.2.1",
+    "ember-cli-github-pages": "0.1.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^4.3.2",
+    "ember-cli-shims": "^1.2.0",
+    "ember-cli-sri": "^2.1.0",
+    "ember-cli-uglify": "^2.0.0",
+    "ember-cli-yuidoc": "0.8.3",
+    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-notify": "5.1.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~3.3.0",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-try": "^0.2.23",
+    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-node": "^6.0.1",
+    "loader.js": "^4.2.3",
+    "qunit-dom": "^0.6.2"
   },
   "engines": {
-    "node": ">= 0.10.0"
-  },
-  "author": "Taras Mankovski <taras@embersherpa.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-addon-genie": "0.0.6",
-    "ember-ajax": "^2.0.1",
-    "ember-cli": "2.6.0-beta.3",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-blanket": "0.9.5",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-es5-shim": "0.3.0",
-    "ember-cli-github-pages": "0.1.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-jshint": "^1.0.0",
-    "ember-cli-qunit": "^1.4.0",
-    "ember-cli-release": "1.0.0-beta.2",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-cli-yuidoc": "0.8.3",
-    "ember-data": "^2.6.0-beta.1",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.5.1",
-    "ember-notify": "5.1.0",
-    "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.1"
-  },
-  "keywords": [
-    "ember-addon"
-  ],
-  "dependencies": {
-    "element-resize-detector": "1.1.4",
-    "ember-cli-babel": "^5.1.6",
-    "ember-cli-htmlbars": "^1.0.3",
-    "broccoli-funnel": "1.0.2",
-    "broccoli-merge-trees": "1.1.1"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
