--- a/package.json
+++ b/package.json
@@ -31,14 +31,11 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.7.0",
-    "ember-addon-genie": "0.0.6",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.3.0",
-    "ember-cli-blanket": "0.9.5",
     "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-es5-shim": "0.3.0",
     "ember-cli-eslint": "^4.2.1",
-    "ember-cli-github-pages": "0.1.0",
+    "ember-cli-github-pages": "^0.1.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.3.2",
@@ -50,7 +47,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-notify": "5.1.0",
+    "ember-notify": "^5.1.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.3.0",
     "ember-source-channel-url": "^1.0.1",
