--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "build": "ember build",
     "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember test",
-    "test:all": "ember try:each"
+    "test": "ember try:testall"
   },
   "dependencies": {
     "broccoli-funnel": "^1.0.2",
